<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_image_loading"
        android:text="@string/wallpaper_page_image_loading"
        android:layout_weight="90"
        android:gravity="center"
        style="@style/MainMenuTitle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_image_deleted"
        android:text="@string/wallpaper_page_image_deleted"
        android:layout_weight="90"
        android:gravity="center"
        android:visibility="gone"
        style="@style/MainMenuTitle"/>

    <ImageView
        android:id="@+id/image_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:visibility="gone"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/btn_set_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/set_wallpaper"
        style="@style/SwitcherMenuButtons"/>
</LinearLayout>